# task-notifier

./: README.md  pyproject.toml
src/task_notifier/: client.py  email_utils.py  main.py  models.py
